# SFMLGameProjectKT

./: .gitignore  game.sln
game/: AnimatedObject.cpp  AnimatedObject.h  Arrow.cpp  Arrow.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Enemy.cpp  Enemy.h  GraphicalObject.cpp  GraphicalObject.h  Platform.cpp  Platform.h  Player.cpp  Player.h  game.vcxproj  game.vcxproj.filters  main.cpp
